WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61504
[Qt] Multiple drop events when doing DnD of images.
https://bugs.webkit.org/show_bug.cgi?id=61504
Summary
[Qt] Multiple drop events when doing DnD of images.
Dawit A.
Reported
2011-05-25 21:52:10 PDT
Based on a downstream report,
https://bugs.kde.org/show_bug.cgi?id=237759
, dragging and dropping any image from any website using QtWebKit from the 2.2 branch produces multiple drop events. This can be reproduced using QtTestBrowser and visiting any site that contains an image. Though I highly doubt it, this issue could potentially be solved the patch that was proposed to fix
bug# 58732
, but was never landed in webkit ?? Dunno, but the issue is 100% perence reproducable for me.
Attachments
Test case
(153 bytes, text/html)
2011-05-28 13:39 PDT
,
Dawit A.
no flags
Details
Patch v01 for review
(1.51 KB, patch)
2011-05-31 21:49 PDT
,
Aparna Nandyal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-05-27 05:31:57 PDT
Do we have a test case for this?
Dawit A.
Comment 2
2011-05-28 13:39:40 PDT
Created
attachment 95271
[details]
Test case
Aparna Nandyal
Comment 3
2011-05-29 10:45:10 PDT
Can you please give more clarity on steps to reproduce the problem? For example, I have opened QtTestBrowser and visited a site that has images. Am I expected to drag the image into some folder?
Dawit A.
Comment 4
2011-05-29 11:46:10 PDT
(In reply to
comment #3
)
> Can you please give more clarity on steps to reproduce the problem? For example, I have opened QtTestBrowser and visited a site that has images. Am I expected to drag the image into some folder?
Yes. There is no need to visit another site. Simply click on the attached test case file, then drag and drop the image to a folder of your choice.
Aparna Nandyal
Comment 5
2011-05-30 11:25:32 PDT
Finally able to reproduce the problem on trunk. Had problems seeing the bug in nautilus initially. Had to change the folder permissions to be able to see the bug.
Andreas Kling
Comment 6
2011-05-30 12:53:59 PDT
This looks suspicious: <
http://trac.webkit.org/changeset/49201
>
Aparna Nandyal
Comment 7
2011-05-31 03:59:04 PDT
(In reply to
comment #6
)
> This looks suspicious: <
http://trac.webkit.org/changeset/49201
>
Your suspicion is right. The image url is getting appended twice in the above code.
Aparna Nandyal
Comment 8
2011-05-31 21:49:34 PDT
Created
attachment 95546
[details]
Patch v01 for review The patch fixes problem which was caused by duplicate url entries.
Andreas Kling
Comment 9
2011-06-02 04:42:36 PDT
Comment on
attachment 95546
[details]
Patch v01 for review r=me.
WebKit Commit Bot
Comment 10
2011-06-02 05:11:02 PDT
Comment on
attachment 95546
[details]
Patch v01 for review Clearing flags on attachment: 95546 Committed
r87897
: <
http://trac.webkit.org/changeset/87897
>
WebKit Commit Bot
Comment 11
2011-06-02 05:11:07 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 12
2011-06-02 06:10:46 PDT
(In reply to
comment #10
)
> (From update of
attachment 95546
[details]
) > Clearing flags on attachment: 95546 > > Committed
r87897
: <
http://trac.webkit.org/changeset/87897
>
No tests? Maybe a test like the one from
bug #61314
could be used?
Ademar Reis
Comment 13
2011-06-02 07:45:29 PDT
Revision
r87897
cherry-picked into qtwebkit-2.2 with commit 11f8b63 <
http://gitorious.org/webkit/qtwebkit/commit/11f8b63
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug